--- a/ControleFinanceiro/ControleFinanceiro.csproj
+++ b/ControleFinanceiro/ControleFinanceiro.csproj
@@ -58,17 +58,22 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="LiteDB" Version="5.0.16" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Remove="Models\" />
 	  <None Remove="Repositories\" />
 	  <None Remove="Views\" />
+	  <None Remove="Libraries\" />
+	  <None Remove="Libraries\Converters\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Models\" />
 	  <Folder Include="Repositories\" />
 	  <Folder Include="Views\" />
+	  <Folder Include="Libraries\" />
+	  <Folder Include="Libraries\Converters\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Compile Remove="AppShell.xaml.cs" />
